# dcopf-grid-verifiers

./: CALIBRATION.md  CHANGELOG.md  README.md  pyproject.toml
calibration/: crosscheck_config.py  eval.md  measure.py  sweep_results.json
dcopf_grid_verifiers/: __init__.py  crosscheck.py  generator.py  rewards.py  solver.py
tests/: test_validation.py
